chat history+ serverside rolls

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
          <div id="dice-roll-area">
             <h2>Dice Roller</h2>
             <button id="rollD20">Roll d20</button>
-            <p>Result: <span id="rollResult">---</span></p>
+            <p><span id="rollResult">---</span></p>
          </div>
 
          <div id="chat-area">
