added Save Data Locally

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>D&D Room</title>
     <link rel="stylesheet" href="style.css">
+    <!-- JSZip Library for zipping files -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
 </head>
 <body>
     <h1>Welcome to the D&D Room!</h1>
@@ -52,6 +54,7 @@
                 <button id="openFeatsButton" style="margin-top: 10px;">Feats & Traits</button>
                 <button id="openAttacksButton" style="margin-top: 10px;">Attacks</button>
                 <button id="openSpellsButton" style="margin-top: 10px;">Spellcasting</button>
+                <button id="saveCharacterDataButton" style="margin-top: 15px; background-color: #28a745;">Save All Data Locally</button>
             </div>
 
             <div id="dice-roll-area">
